--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -116,7 +116,8 @@
     "    props=False,\n",
     "    snr=True,\n",
     "    motors=True,\n",
-    "    source=None\n",
+    "    source=None,\n",
+    "    distance=0\n",
     ")\n",
     "exp_name = '2020_11_30_wall_hover'; \n",
     "fname_motors = get_fname(**kwargs)\n",
@@ -246,21 +247,27 @@
     "\n",
     "spec_chirp = get_spectrogram(df_chirp)\n",
     "signals_f = np.array([*df_chirp.loc[:, \"signals_f\"]])\n",
-    "times_chirp = np.arange(signals_f.shape[0])\n",
     "frequencies_chirp = np.array(df_chirp.iloc[0].frequencies)\n",
+    "seconds = (df_chirp.timestamp.values - df_chirp.iloc[0].timestamp)/ 2048\n",
     "\n",
+    "#times_chirp = np.arange(3000, 5000)\n",
+    "times_chirp = np.arange(spec_chirp.shape[1])\n",
+    "max_freq_plot = 0 #3000\n",
+    "min_freq_plot = 16000 #2500\n",
+    "mask_freq = (frequencies_chirp < max_freq_plot) & (frequencies_chirp > min_freq_plot)\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(10, 10)\n",
     "\n",
     "slope = 14930 / 21170 \n",
     "offset = 0\n",
-    "psd = extract_linear_psd(signals_f, frequencies_chirp, slope, offset, delta=500, ax=ax)\n",
+    "#psd = extract_linear_psd(signals_f, frequencies_chirp, slope, offset, delta=500, ax=ax)\n",
     "\n",
-    "ax.pcolormesh(times_chirp, \n",
-    "              frequencies_chirp[frequencies_chirp<max_freq_plot], \n",
-    "              np.log10(spec_chirp[frequencies_chirp < max_freq_plot, :]))\n",
-    "ax.set_xlim(times_chirp[0], times_chirp[-1])\n",
-    "ax.set_ylim(0, max_freq_plot)"
+    "spec_small = spec_chirp[mask_freq, :]\n",
+    "spec_small = spec_small[:, times_chirp]\n",
+    "ax.pcolormesh(seconds[times_chirp], frequencies_chirp[mask_freq], np.log10(spec_small))\n",
+    "#ax.axhline(f)\n",
+    "#ax.set_xlim(times_chirp[0], times_chirp[-1])\n",
+    "ax.set_ylim(min_freq_plot, max_freq_plot)"
    ]
   },
   {
@@ -272,7 +279,7 @@
     "fig = plt.figure()\n",
     "fig.set_size_inches(10, 10)\n",
     "plt.title('psd of buzzer frequency sweep')\n",
-    "plt.semilogy(frequencies_chirp, psd[0, :], color='c0', label='buzzer')\n",
+    "plt.semilogy(frequencies_chirp, psd[0, :], color='C0', label='buzzer')\n",
     "plt.xlim(frequencies_chirp[1], 16000)\n",
     "plt.grid(which='both')"
    ]
@@ -631,16 +638,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def filter_by_dicts(df, dicts):\n",
-    "    mask = np.zeros(len(df_total), dtype=bool)\n",
-    "    for dict_ in dicts:\n",
-    "        this_mask = np.ones(len(df_total), dtype=bool)\n",
-    "        for key, val in dict_.items():\n",
-    "            this_mask = this_mask & (df_total.loc[:, key] == val)\n",
-    "        mask = np.bitwise_or(mask, this_mask)\n",
-    "        assert np.any(mask)\n",
-    "    return df_total.loc[mask, :]\n",
-    "    \n",
+    "from wall_analysis import filter_by_dicts\n",
     "if exp_name == \"2020_12_7_moving\":\n",
     "    motors = \"all43000\"\n",
     "    chosen_dicts = [\n",
