--- a/notebooks/Calibration.ipynb
+++ b/notebooks/Calibration.ipynb
@@ -69,30 +69,26 @@
     "    'source': 'sweep',\n",
     "}]\n",
     "\n",
-    "\n",
-    "# found manually\n",
-    "sweep_lines = {\n",
-    "    'sweep': dict(\n",
-    "        slope=4000 / 280,\n",
-    "        offset=400,\n",
-    "        delta=20,\n",
-    "    )\n",
-    "}\n",
+    "# found visually from spectrogram: \n",
+    "sweep_lines = dict(\n",
+    "    slope=4000/280,\n",
+    "    offset=400,\n",
+    "    delta=20,\n",
+    ")\n",
     "\n",
     "df_chosen = filter_by_dicts(df_total, dict_chosen)\n",
-    "for source, df in df_chosen.groupby('source'):\n",
-    "    for j, row in df.iterrows():\n",
-    "        spec = np.sum(np.abs(row.signals_f), axis=1) # sum over all mics\n",
+    "for j, row in df_chosen.iterrows():\n",
+    "    spec = np.sum(np.abs(row.signals_f), axis=1) # sum over all mics\n",
     "\n",
-    "        fig, axs  = plt.subplots(1, 2)\n",
-    "        fig.set_size_inches(10, 5)\n",
-    "        fig.suptitle(f'experiment \"{row.appendix}\"')\n",
-    "        axs[0].pcolorfast(range(spec.shape[0]), row.frequencies, np.log10(spec.T))\n",
-    "        psd = extract_linear_psd(row.signals_f, row.frequencies, ax=axs[0], **sweep_lines[source])\n",
+    "    fig, axs  = plt.subplots(1, 2)\n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    fig.suptitle(f'experiment \"{row.appendix}\"')\n",
+    "    axs[0].pcolorfast(range(spec.shape[0]), row.frequencies, np.log10(spec.T))\n",
+    "    psd = extract_linear_psd(row.signals_f, row.frequencies, ax=axs[0], **sweep_lines)\n",
     "\n",
-    "        for i in range(psd.shape[0]):\n",
-    "            axs[1].semilogy(row.frequencies, psd[i], label=f'mic{i}')\n",
-    "        plt.legend(loc='upper left')"
+    "    for i in range(psd.shape[0]):\n",
+    "        axs[1].semilogy(row.frequencies, psd[i], label=f'mic{i}')\n",
+    "    plt.legend(loc='upper left')"
    ]
   },
   {
@@ -101,12 +97,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_snr_psd(signals_f, frequencies_matrix, min_t=0, max_t=None, n_freq=1, ax=None):\n",
+    "def extract_psd_dict(signals_f, frequencies_matrix, min_t=0, max_t=None, n_freq=1, ax=None):\n",
+    "    \"\"\"\n",
+    "    Extract a hash table from the signals and frequencies information, one for \n",
+    "    each microphone.\n",
+    "    \n",
+    "    structure of output: \n",
+    "    \n",
+    "    mic0: {\n",
+    "        f0: [val0, val1],\n",
+    "        f1: [val0, val1, val2], \n",
+    "        f2: [...]\n",
+    "    }\n",
+    "    mic1: ...\n",
+    "    \"\"\"\n",
     "    n_mics = signals_f.shape[1]\n",
     "    all_frequencies = np.unique(frequencies_matrix.flatten())\n",
     "\n",
     "    psd_dict = [{f:[] for f in all_frequencies} for i in range(n_mics)]\n",
-    "\n",
     "\n",
     "    if max_t is None:\n",
     "        max_t = frequencies_matrix.shape[0]\n",
@@ -122,7 +130,53 @@
     "        for i_mic in range(n_mics):\n",
     "            for f_idx, f in enumerate(fs):\n",
     "                psd_dict[i_mic][f].append(np.abs(signals_f[i_t, i_mic, f_idx]))\n",
-    "    return psd_dict"
+    "    return psd_dict\n",
+    "                \n",
+    "def extract_psd(psd_dict_list, verbose=False):\n",
+    "    \"\"\"\n",
+    "    Combine hash tables in given list into one big hashtable, and compute the \n",
+    "    median and std. \n",
+    "    \n",
+    "    \"\"\"\n",
+    "    # extract all the different frequencies from psd_dict_list.\n",
+    "    n_mics = len(psd_dict_list[0])\n",
+    "    frequencies = set().union(*(psd_dict[i].keys() for psd_dict in psd_dict_list for i in range(n_mics)))\n",
+    "    frequencies = np.sort(list(frequencies))\n",
+    "    \n",
+    "    psd = np.zeros((n_mics, len(frequencies)))\n",
+    "    psd_std = np.zeros((n_mics, len(frequencies)))\n",
+    "    for i_mic in range(n_mics):\n",
+    "        for j, f in enumerate(frequencies):\n",
+    "            \n",
+    "            # combine all values at this f and mic\n",
+    "            vals = []\n",
+    "            for psd_dict in psd_dict_list:\n",
+    "                if f in psd_dict[i_mic].keys():\n",
+    "                    vals += psd_dict[i_mic][f]\n",
+    "                    \n",
+    "            if verbose:\n",
+    "                print(f'for frequency {f}, mic{i_mic}, found {vals}')\n",
+    "            if len(vals):\n",
+    "                psd[i_mic, j] = np.median(vals) \n",
+    "                psd_std[i_mic, j] = np.std(vals) \n",
+    "                \n",
+    "    # remove the frequencies for which we have no data\n",
+    "    mask = np.any(psd > 0, axis=0)\n",
+    "    return psd[:, mask], frequencies[mask], psd_std[:, mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psd_dict1 = [{0: [], 100:[1, 2, 3], 200:[0, 4, 5]}, {100:[0, 1], 200:[1, 2]}]\n",
+    "psd_dict2 = [{100:[1, 2, 5], 250:[1, 4, 5]}, {100:[0, 1], 250:[3, 4]}]\n",
+    "psd_dict_list = [psd_dict1, psd_dict2]\n",
+    "psd, frequencies, psd_std = extract_psd(psd_dict_list)\n",
+    "print(psd.shape)\n",
+    "print(psd, frequencies)"
    ]
   },
   {
@@ -147,7 +201,7 @@
     "\n",
     "kwargs = {\n",
     "    'sweep': {\n",
-    "        'min_t': 100,\n",
+    "        'min_t': 105,\n",
     "        'max_t': 320\n",
     "    },\n",
     "    'sweep_buzzer': {\n",
@@ -161,13 +215,41 @@
     "\n",
     "df_chosen = filter_by_dicts(df_total, dict_chosen)\n",
     "for source, df in df_chosen.groupby('source'):\n",
+    "    fig, ax  = plt.subplots()\n",
+    "    fig.set_size_inches(5, 5)\n",
+    "    ax.grid(which='both')\n",
     "    for j, row in df.iterrows():\n",
-    "        fig, ax  = plt.subplots()\n",
-    "        fig.set_size_inches(10, 5)\n",
-    "        psd_dict = extract_snr_psd(row.signals_f, row.frequencies_matrix, ax=ax, **kwargs[source])\n",
-    "        ax.grid(which='both')\n",
-    "        df_total.loc[j, 'psd_dict'] = psd_dict\n",
-    "df_total.tail()"
+    "        psd_dict = extract_psd_dict(row.signals_f, row.frequencies_matrix, ax=ax, **kwargs[source])\n",
+    "        df_total.loc[j, 'psd_dict'] = psd_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kwargs_harmonics = {\n",
+    "    'sweep': {\n",
+    "        'min_t': 40,\n",
+    "        'max_t': 95 \n",
+    "    },\n",
+    "    'sweep_buzzer': {\n",
+    "        'min_t': 40,\n",
+    "        'max_t': 420 \n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# need this to assign list to this columns\n",
+    "df_total = df_total.assign(psd_dict_harmonics=None)\n",
+    "df_chosen = filter_by_dicts(df_total, dict_chosen)\n",
+    "for source, df in df_chosen.groupby('source'):\n",
+    "    fig, ax  = plt.subplots()\n",
+    "    fig.set_size_inches(5, 5)\n",
+    "    ax.grid(which='both')\n",
+    "    for j, row in df.iterrows():\n",
+    "        psd_dict_harmonics = extract_psd_dict(row.signals_f, row.frequencies_matrix, ax=ax, **kwargs_harmonics[source])\n",
+    "        df_total.loc[j, 'psd_dict_harmonics'] = psd_dict_harmonics"
    ]
   },
   {
@@ -178,30 +260,22 @@
    },
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
     "mic_idx = 0\n",
     "\n",
     "df_chosen = filter_by_dicts(df_total, dict_chosen)\n",
     "for source, df in df_chosen.groupby('source'):\n",
     "    fig, axs = plt.subplots(len(df), sharey=True, sharex=True)\n",
     "    fig.set_size_inches(10, 10)\n",
-    "    fig.suptitle(f'{source}\"{row.appendix}\"')\n",
+    "    fig.suptitle(f'{source}')\n",
     "    \n",
     "    for j_idx, (j, row) in enumerate(df.iterrows()):\n",
     "        axs[j_idx].set_title(f'experiment \"{row.appendix}\"')\n",
     "        \n",
-    "        if row.psd_dict is None:\n",
-    "            continue\n",
-    "            \n",
-    "        psd_here = row.psd_dict[mic_idx] # {f:[]\n",
-    "        \n",
-    "        for key, vals in psd_here.items():\n",
-    "            \n",
-    "            #sns.scatterplot(x=[f]*len(vals), y=vals)\n",
-    "            # color by timestamp? \n",
-    "            if len(vals) > 0:\n",
-    "                vals = vals[2:-2]\n",
+    "        for key, vals in row.psd_dict[mic_idx].items():\n",
     "            axs[j_idx].scatter([key]*len(vals), vals, c=range(len(vals)), cmap='inferno')\n",
+    "        for key, vals in row.psd_dict_harmonics[mic_idx].items():\n",
+    "            axs[j_idx].scatter([key]*len(vals), vals, c=range(len(vals)), cmap='cool')\n",
+    "        \n",
     "        axs[j_idx].set_yscale('log')"
    ]
   },
@@ -213,32 +287,80 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "for source, df in df_chosen.groupby('source'):\n",
     "    for j, row in df.iterrows():\n",
+    "        n_mics = row.signals_f.shape[1]\n",
     "        \n",
-    "        spec = np.sum(np.abs(row.signals_f), axis=1) # sum over all mics\n",
-    "        psd_dict = row.psd_dict\n",
-    "\n",
-    "        figs, axs  = plt.subplots(n_mics, sharex=True, sharey=True)\n",
-    "        figs.set_size_inches(10, 10)\n",
+    "        psd, frequencies, psd_std = extract_psd([row.psd_dict], verbose=False) \n",
+    "        \n",
     "        fig, ax  = plt.subplots()\n",
     "        fig.set_size_inches(10, 5)\n",
-    "        figs.suptitle(f'{source}, experiment \"{row.appendix}\"')\n",
+    "        fig.suptitle(f'{source}: experiment \"{row.appendix}\"')\n",
     "        for i in range(n_mics):\n",
-    "            f_list = []\n",
-    "            vals_list = []\n",
-    "            for f, vals in psd_dict[i].items():\n",
-    "                if len(vals) == 0:\n",
-    "                    continue\n",
-    "                else:\n",
-    "                    f_list.append(f)\n",
-    "                    vals_list.append(np.mean(vals))\n",
-    "                    axs[i].scatter(f, np.mean(vals), color=f'C{i}')\n",
-    "            axs[i].set_yscale('log')\n",
-    "            ax.plot(f_list, vals_list, color=f'C{i}', label=f'mic{i}')\n",
+    "            mask = psd[i, :] > 0\n",
+    "            ax.plot(frequencies[mask], psd[i, mask], color=f'C{i}', label=f'mic{i}', marker='o')\n",
     "        ax.set_yscale('log')\n",
     "        ax.legend(loc='upper left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#chosen experiments for calibration, based on variance above.  \n",
+    "#chosen_experiments = ['_HALL', '_HALL2', '_HALL3']\n",
+    "chosen_experiments = ['_HALL', '_HALL2']\n",
+    "\n",
+    "df_calib = pd.DataFrame(index=[], columns=['frequencies', 'psd', 'psd_std', 'type', 'source'])\n",
+    "\n",
+    "for source, df in df_chosen.groupby('source'):\n",
+    "    for type_ in ['psd_dict', 'psd_dict_harmonics']:\n",
+    "        \n",
+    "        psd_dict_list = []\n",
+    "        for appendix in chosen_experiments:\n",
+    "            psd_dict = list(df.loc[df.appendix==appendix, type_].values)\n",
+    "            psd_dict_list += psd_dict\n",
+    "    \n",
+    "        psd, frequencies, psd_std = extract_psd(psd_dict_list, verbose=False) \n",
+    "        df_calib.loc[len(df_calib), :] = {\n",
+    "            'frequencies': frequencies,\n",
+    "            'psd': psd, \n",
+    "            'psd_std': psd_std, \n",
+    "            'type': type_, \n",
+    "            'source': source\n",
+    "        }\n",
+    "    \n",
+    "fname = f'results/calibration_results.pkl'\n",
+    "pd.to_pickle(df_calib, fname)\n",
+    "print(f'saved as {fname}')\n",
+    "#df_chosen = df_total.loc[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df_calib.psd.values.shape)\n",
+    "psd_all = np.concatenate(df_calib.psd.values, axis=1)\n",
+    "freqs_all = np.concatenate(df_calib.frequencies.values)\n",
+    "y_min = np.min(psd_all)\n",
+    "y_max = np.max(psd_all)\n",
+    "x_min = np.min(freqs_all) \n",
+    "x_max = np.max(freqs_all) \n",
+    "\n",
+    "for i, row in df_calib.iterrows():\n",
+    "    fig, ax = plt.subplots()\n",
+    "    fig.set_size_inches(7, 5)\n",
+    "    ax.set_title(f'{row.source}{row.type.replace(\"psd_dict\", \"\")}')\n",
+    "    for i in range(row.psd.shape[0]):\n",
+    "        ax.errorbar(x=row.frequencies, y=row.psd[i, :], yerr=row.psd_std[i, :])\n",
+    "    ax.set_yscale('log')\n",
+    "    ax.set_ylim(y_min, y_max)\n",
+    "    ax.set_xlim(x_min, x_max)"
    ]
   },
   {
@@ -247,10 +369,22 @@
    "source": [
     "## Notes for next steps\n",
     "\n",
-    "- investigate variance of measurements within each bin, and potentially discard the first and last measurements\n",
-    "- decide on dataset to use for calibration based on above, potentially take the combination of multiple measurements\n",
-    "- understand what exact frequencies buzzer is playing at, and if there is the \"step\" effect (as discussed with Adrien)  "
+    "- potentially discard the first and last measurements (check final result with and without)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
