Add more calibration considerations

--- a/notebooks/Calibration.ipynb
+++ b/notebooks/Calibration.ipynb
@@ -51,6 +51,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(df_total.appendix.unique())\n",
+    "df_total.loc[df_total.appendix=='_HALL3ok', 'appendix'] = '_HALL3'\n",
+    "print(df_total.appendix.unique())\n",
     "df_total.tail()"
    ]
   },
@@ -132,10 +135,10 @@
     "                psd_dict[i_mic][f].append(np.abs(signals_f[i_t, i_mic, f_idx]))\n",
     "    return psd_dict\n",
     "                \n",
-    "def extract_psd(psd_dict_list, verbose=False):\n",
+    "def extract_psd(psd_dict_list, verbose=False, method='median'):\n",
     "    \"\"\"\n",
-    "    Combine hash tables in given list into one big hashtable, and compute the \n",
-    "    median and std. \n",
+    "    Combine hash tables in given list into one big hashtable, and return the unique keys\n",
+    "    and statistics of its values.\n",
     "    \n",
     "    \"\"\"\n",
     "    # extract all the different frequencies from psd_dict_list.\n",
@@ -157,7 +160,14 @@
     "            if verbose:\n",
     "                print(f'for frequency {f}, mic{i_mic}, found {vals}')\n",
     "            if len(vals):\n",
-    "                psd[i_mic, j] = np.median(vals) \n",
+    "                \n",
+    "                if ('reject' in method) and (len(vals) > 4):\n",
+    "                    vals = vals[2:-2]\n",
+    "                if 'median' in method: \n",
+    "                    psd[i_mic, j] = np.median(vals) \n",
+    "                if 'mean' in method: \n",
+    "                    psd[i_mic, j] = np.mean(vals) \n",
+    "                    \n",
     "                psd_std[i_mic, j] = np.std(vals) \n",
     "                \n",
     "    # remove the frequencies for which we have no data\n",
@@ -214,13 +224,15 @@
     "df_total = df_total.assign(psd_dict=None)\n",
     "\n",
     "df_chosen = filter_by_dicts(df_total, dict_chosen)\n",
-    "for source, df in df_chosen.groupby('source'):\n",
+    "for (source, motors), df in df_chosen.groupby(['source', 'motors']):\n",
     "    fig, ax  = plt.subplots()\n",
     "    fig.set_size_inches(5, 5)\n",
     "    ax.grid(which='both')\n",
+    "    legend = []\n",
     "    for j, row in df.iterrows():\n",
     "        psd_dict = extract_psd_dict(row.signals_f, row.frequencies_matrix, ax=ax, **kwargs[source])\n",
-    "        df_total.loc[j, 'psd_dict'] = psd_dict"
+    "        df_total.loc[j, 'psd_dict'] = psd_dict\n",
+    "        legend.append(row.appendix)"
    ]
   },
   {
@@ -313,7 +325,9 @@
     "#chosen_experiments = ['_HALL', '_HALL2', '_HALL3']\n",
     "chosen_experiments = ['_HALL', '_HALL2']\n",
     "\n",
-    "df_calib = pd.DataFrame(index=[], columns=['frequencies', 'psd', 'psd_std', 'type', 'source'])\n",
+    "df_calib = pd.DataFrame(index=[], columns=['frequencies', 'psd', 'psd_std', 'type', 'source', \n",
+    "                                           'method'])\n",
+    "methods = ['median', 'median-reject'] # 'mean', 'mean-reject'\n",
     "\n",
     "for source, df in df_chosen.groupby('source'):\n",
     "    for type_ in ['psd_dict', 'psd_dict_harmonics']:\n",
@@ -323,14 +337,16 @@
     "            psd_dict = list(df.loc[df.appendix==appendix, type_].values)\n",
     "            psd_dict_list += psd_dict\n",
     "    \n",
-    "        psd, frequencies, psd_std = extract_psd(psd_dict_list, verbose=False) \n",
-    "        df_calib.loc[len(df_calib), :] = {\n",
-    "            'frequencies': frequencies,\n",
-    "            'psd': psd, \n",
-    "            'psd_std': psd_std, \n",
-    "            'type': type_, \n",
-    "            'source': source\n",
-    "        }\n",
+    "        for method in methods:\n",
+    "            psd, frequencies, psd_std = extract_psd(psd_dict_list, method=method, verbose=False) \n",
+    "            df_calib.loc[len(df_calib), :] = {\n",
+    "                'frequencies': frequencies,\n",
+    "                'psd': psd, \n",
+    "                'psd_std': psd_std, \n",
+    "                'type': type_, \n",
+    "                'source': source,\n",
+    "                'method': method\n",
+    "            }\n",
     "    \n",
     "fname = f'results/calibration_results.pkl'\n",
     "pd.to_pickle(df_calib, fname)\n",
@@ -341,10 +357,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "print(df_calib.psd.values.shape)\n",
     "psd_all = np.concatenate(df_calib.psd.values, axis=1)\n",
     "freqs_all = np.concatenate(df_calib.frequencies.values)\n",
     "y_min = np.min(psd_all)\n",
@@ -355,7 +372,7 @@
     "for i, row in df_calib.iterrows():\n",
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(7, 5)\n",
-    "    ax.set_title(f'{row.source}{row.type.replace(\"psd_dict\", \"\")}')\n",
+    "    ax.set_title(f'{row.source}{row.type.replace(\"psd_dict\", \"\")}, {row.method}')\n",
     "    for i in range(row.psd.shape[0]):\n",
     "        ax.errorbar(x=row.frequencies, y=row.psd[i, :], yerr=row.psd_std[i, :])\n",
     "    ax.set_yscale('log')\n",
@@ -367,9 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Notes for next steps\n",
-    "\n",
-    "- potentially discard the first and last measurements (check final result with and without)"
+    "# frequency selection with motors on"
    ]
   },
   {
@@ -377,14 +392,83 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "chosen_dict = dict(\n",
+    "    #appendix='_BC329',\n",
+    "    appendix='',\n",
+    "    motors='all43000',\n",
+    "    snr=1,\n",
+    "    source='sweep'\n",
+    ")\n",
+    "df_chosen = filter_by_dicts(df_total, [chosen_dict])\n",
+    "assert len(df_chosen) == 1\n",
+    "row = df_chosen.iloc[0]\n",
+    "\n",
+    "fig = plt.figure() \n",
+    "fig.set_size_inches(10, 5)\n",
+    "plt.title(f'strongest frequency')\n",
+    "plt.plot(row.seconds, row.frequencies_matrix[:, 0])\n",
+    "plt.ylim(1000, 5000)\n",
+    "\n",
+    "n_freqs = 32\n",
+    "cmap = plt.get_cmap('inferno', n_freqs)\n",
+    "fig = plt.figure()\n",
+    "plt.title(f'strongest {n_freqs} frequencies (dark to light)')\n",
+    "fig.set_size_inches(10, 5)\n",
+    "for i in range(n_freqs):\n",
+    "    color = i / n_freqs #(n_freqs - i)/n_freqs\n",
+    "    plt.scatter(row.seconds, row.frequencies_matrix[:, i], color=cmap(color), s=2)\n",
+    "plt.ylim(1000, 5000)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "chosen_dict = dict(\n",
+    "    #appendix='_BC329',\n",
+    "    #appendix='',\n",
+    "    motors='all43000',\n",
+    "    snr=0,\n",
+    "    source='sweep'\n",
+    ")\n",
+    "df_chosen = filter_by_dicts(df_total, [chosen_dict])\n",
+    "for i, row in df_chosen.iterrows():\n",
+    "    fig, ax = plt.subplots()\n",
+    "    spec = np.sum(np.abs(row.signals_f), axis=1)\n",
+    "    ax.pcolorfast(row.seconds, row.frequencies, np.log10(spec[1:, 1:].T))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chosen_dict = dict(\n",
+    "    motors='all43000',\n",
+    "    #snr=1,\n",
+    "    source='sweep'\n",
+    ")\n",
+    "mic_idx = 0\n",
+    "df_chosen = filter_by_dicts(df_total, [chosen_dict])\n",
+    "\n",
+    "plt.figure()\n",
+    "for i, row in df_chosen.iterrows():\n",
+    "    if row.frequencies_matrix is None:\n",
+    "        frequencies_matrix = np.repeat(row.frequencies[None, :], len(row.seconds), axis=0)\n",
+    "    else:\n",
+    "        frequencies_matrix = row.frequencies_matrix\n",
+    "    print(frequencies_matrix.shape)\n",
+    "    psd_dict = extract_psd_dict(row.signals_f, frequencies_matrix, n_freq=32)\n",
+    "    psd, frequencies, psd_std = extract_psd([psd_dict])\n",
+    "    \n",
+    "    plt.plot(frequencies, psd[mic_idx], marker='o', label=f'snr: {row.snr}')\n",
+    "plt.yscale('log')\n",
+    "plt.legend()"
+   ]
   },
   {
    "cell_type": "code",
