Move psd functions to module

--- a/notebooks/Calibration.ipynb
+++ b/notebooks/Calibration.ipynb
@@ -100,87 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_psd_dict(signals_f, frequencies_matrix, min_t=0, max_t=None, n_freq=1, ax=None):\n",
-    "    \"\"\"\n",
-    "    Extract a hash table from the signals and frequencies information, one for \n",
-    "    each microphone.\n",
-    "    \n",
-    "    structure of output: \n",
-    "    \n",
-    "    mic0: {\n",
-    "        f0: [val0, val1],\n",
-    "        f1: [val0, val1, val2], \n",
-    "        f2: [...]\n",
-    "    }\n",
-    "    mic1: ...\n",
-    "    \"\"\"\n",
-    "    n_mics = signals_f.shape[1]\n",
-    "    all_frequencies = np.unique(frequencies_matrix.flatten())\n",
-    "\n",
-    "    psd_dict = [{f:[] for f in all_frequencies} for i in range(n_mics)]\n",
-    "\n",
-    "    if max_t is None:\n",
-    "        max_t = frequencies_matrix.shape[0]\n",
-    "        \n",
-    "    if ax is not None:\n",
-    "        ax.plot(frequencies_matrix[:, 0])\n",
-    "        ax.axvline(min_t, color='k')\n",
-    "        ax.axvline(max_t, color='k')\n",
-    "\n",
-    "    for i_t in range(min_t, max_t): # n_times x n_freqs \n",
-    "        # save strongest n_freq frequencies\n",
-    "        fs = frequencies_matrix[i_t, :n_freq]\n",
-    "        for i_mic in range(n_mics):\n",
-    "            for f_idx, f in enumerate(fs):\n",
-    "                psd_dict[i_mic][f].append(np.abs(signals_f[i_t, i_mic, f_idx]))\n",
-    "    return psd_dict\n",
-    "                \n",
-    "def extract_psd(psd_dict_list, verbose=False, method='median'):\n",
-    "    \"\"\"\n",
-    "    Combine hash tables in given list into one big hashtable, and return the unique keys\n",
-    "    and statistics of its values.\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    # extract all the different frequencies from psd_dict_list.\n",
-    "    n_mics = len(psd_dict_list[0])\n",
-    "    frequencies = set().union(*(psd_dict[i].keys() for psd_dict in psd_dict_list for i in range(n_mics)))\n",
-    "    frequencies = np.sort(list(frequencies))\n",
-    "    \n",
-    "    psd = np.zeros((n_mics, len(frequencies)))\n",
-    "    psd_std = np.zeros((n_mics, len(frequencies)))\n",
-    "    for i_mic in range(n_mics):\n",
-    "        for j, f in enumerate(frequencies):\n",
-    "            \n",
-    "            # combine all values at this f and mic\n",
-    "            vals = []\n",
-    "            for psd_dict in psd_dict_list:\n",
-    "                if f in psd_dict[i_mic].keys():\n",
-    "                    vals += psd_dict[i_mic][f]\n",
-    "                    \n",
-    "            if verbose:\n",
-    "                print(f'for frequency {f}, mic{i_mic}, found {vals}')\n",
-    "            if len(vals):\n",
-    "                \n",
-    "                if ('reject' in method) and (len(vals) > 4):\n",
-    "                    vals = vals[2:-2]\n",
-    "                if 'median' in method: \n",
-    "                    psd[i_mic, j] = np.median(vals) \n",
-    "                if 'mean' in method: \n",
-    "                    psd[i_mic, j] = np.mean(vals) \n",
-    "                    \n",
-    "                psd_std[i_mic, j] = np.std(vals) \n",
-    "                \n",
-    "    # remove the frequencies for which we have no data\n",
-    "    mask = np.any(psd > 0, axis=0)\n",
-    "    return psd[:, mask], frequencies[mask], psd_std[:, mask]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from wall_analysis import extract_psd, extract_psd_dict\n",
     "psd_dict1 = [{0: [], 100:[1, 2, 3], 200:[0, 4, 5]}, {100:[0, 1], 200:[1, 2]}]\n",
     "psd_dict2 = [{100:[1, 2, 5], 250:[1, 4, 5]}, {100:[0, 1], 250:[3, 4]}]\n",
     "psd_dict_list = [psd_dict1, psd_dict2]\n",
